[gd_scene load_steps=8 format=3 uid="uid://cynm73wdgh227"]

[ext_resource type="Script" path="res://scenes/enemies/watcher/watcher.gd" id="1_23yyb"]

[sub_resource type="Gradient" id="Gradient_41ah6"]
offsets = PackedFloat32Array(0, 0.967532, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.733766, 0.733766, 0.733766, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_e5oj6"]
gradient = SubResource("Gradient_41ah6")

[sub_resource type="BoxShape3D" id="BoxShape3D_fn76y"]
size = Vector3(31.7627, 30.9968, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_5t8rv"]
size = Vector3(41.4633, 32.3872, 18.6641)

[sub_resource type="BoxShape3D" id="BoxShape3D_gl6nq"]
size = Vector3(87.2928, 51.4141, 57.803)

[sub_resource type="BoxShape3D" id="BoxShape3D_xj1eb"]
size = Vector3(34.4225, 33.4625, 3.96797)

[node name="Aberration" type="CharacterBody3D"]
collision_layer = 16
collision_mask = 16
motion_mode = 1
script = ExtResource("1_23yyb")

[node name="Sprite" type="Sprite3D" parent="."]
transform = Transform3D(50, 0, 0, 0, 50, 0, 0, 0, 50, 0, 0, 0)
billboard = 1
texture = SubResource("GradientTexture2D_e5oj6")

[node name="Col" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00146484, 0.246216, 0)
shape = SubResource("BoxShape3D_fn76y")

[node name="Close" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Close"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.276863, 3.71606, 1.43133)
shape = SubResource("BoxShape3D_5t8rv")

[node name="Warning" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Warning"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.82908, 2.11826, 2.0085)
shape = SubResource("BoxShape3D_gl6nq")

[node name="Kill" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Kill"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.795631, -0.375412, 1.26281)
shape = SubResource("BoxShape3D_xj1eb")

[node name="Ramp" type="Timer" parent="."]
unique_name_in_owner = true
autostart = true

[connection signal="body_entered" from="Close" to="." method="_on_close_body_entered"]
[connection signal="body_exited" from="Close" to="." method="_on_close_body_exited"]
[connection signal="body_entered" from="Warning" to="." method="_on_warning_body_entered"]
[connection signal="body_exited" from="Warning" to="." method="_on_warning_body_exited"]
[connection signal="body_entered" from="Kill" to="." method="_on_kill_body_entered"]
[connection signal="timeout" from="Ramp" to="." method="_on_ramp_timeout"]
